Revision history for {{$dist->name}}

{{$NEXT}}

0.36      2015-05-29 13:40:32 -0400
  - Explicitly require constant pragma version 1.32

0.35      2015-05-29 12:06:39 -0400
  - FFI::Platypus::Record uses constant to create size of alignment constants
    instead of creating them with a sub reference (this usage was deprecated
    in Perl 5.22)

0.34      2015-05-07 09:27:04 -0400
  - Require Alien::FFI which is more reliable at configure time on some platforms

0.33      2015-03-23 21:55:02 -0400
  - Additional fix for Microsoft Visual C++ that didn't get folded into
    the previous release.
  - Fixed segfault during global destruction (gh#53)

0.32      2015-03-18 13:02:53 -0400
  - Make sure -L flags from Alien::FFI come before those in perl Config
    For more reliable builds
  - Support for Microsoft Visual C++ (you will probably also need
    Alien::FFI 0.09 or beter)

0.31      2015-02-26 13:41:23 -0500
  - Fix bug involving wide custom arguments 
    "wide" meaning where a single Perl argument is translated
    into multiple machine code arguments.  (pipcet++ gh#43)

0.30      2015-02-25 17:50:54 -0500
  - You can now pass an opaque in place of a closure type (pipcet++ gh#40,gh#41)
  - FFI closures are now cached and can be reused if the same closure is passed
    repeatedly (pipcet++ gh#40,gh#42)
  - Passing non-reference to scalar as a pointer argument will now issue a warning
    (gh#5)

0.29      2015-02-24 08:50:34 -0500
  - Delayed loading of Win32::ErrorMode to avoid build prereq failure on Windows

0.28      2015-02-23 14:01:54 -0500
  - Fix Win32 probe prereq on non-Strawberry 5.20.x+
  - Fix for Solaris cc

0.27      2015-02-22 11:17:05 -0500
  - Interface to alternate ABIs / calling conventions
  - Added abi method
  - Added abis class method
  - Simplify Win32 probe
  - Added FFI::Platypus::Lang::Win32 which provides data types used by
    the Windows API.  Takes care of subtle differences between
    Win32 and Win64.